Commit in the newbranch

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
 	<p>3.Google Cloud Load Balancers</p>
 	<p>4.Google Cloud Hybrid Connectivity</p>
 	<p>5.Google Kubernetes Engine</p>
+	<p>6.Azure Devops</p>
 </body>
